results/classifier/zero-shot/105/device/1382477
device: 0.859
mistranslation: 0.856
instruction: 0.815
socket: 0.797
network: 0.788
vnc: 0.782
graphic: 0.660
semantic: 0.638
assembly: 0.497
KVM: 0.476
boot: 0.453
other: 0.368

hw/i386/intel_iommu.c:902: wrong logical operator ?

/home/dcb/qemu/trunk/qemu/hw/i386/intel_iommu.c:902:5: error: logical ‘and’ applied to non-boolean constant [-Werror=logical-op]
     pvtd_as = s->address_spaces[VTD_SID_TO_BUS(source_id)];
     ^

$ fgrep VTD_SID_TO_BUS `find . -name \*.h -print`
./include/hw/i386/intel_iommu.h:#define VTD_SID_TO_BUS(sid)         (((sid) >> 8) && 0xff)
$ 

Sounds to me like

#define VTD_SID_TO_BUS(sid)         (((sid) >> 8) & 0xff)

would be better.

Fix has been included here:
http://git.qemu.org/?p=qemu.git;a=commitdiff;h=1e06f131fd9a44dd4af

